# souschef

./: .ansible-lint  .codeql.yml  .codeqlignore  .coverage  .dockerignore  .editorconfig  .env.devcontainer.example  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .mutmut.toml  .pre-commit-config.yaml  .release-please-config.json  .snyk  .trivyignore  .trufflehog-ignore  .yamllint  ARCHITECTURE_COMPLIANCE.md  CHANGELOG.md  CITATION.cff  CLI.md  CODEQL_QUICK_REFERENCE.md  CODEQL_SETUP.md  CODEQL_STATUS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_AUDIT.md  DOCUMENTATION_FIX_SUMMARY.md  Dockerfile  Dockerfile.mcp  Dockerfile.ui  HABITAT_IMPL.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  Jenkinsfile  LOCAL_CODEQL_GUIDE.md  METRICS_CONSISTENCY_SUMMARY.md  MUTATION_BASELINE.md  Makefile.docker  (+25 more)
.codeql/: .gitignore  README.md
.codeql/config/: .codeqlignore  config.yml
.codeql/reports/: codeql-current-clean.sarif  (+5 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.github/: AGENTS.md  CODEOWNERS  CONTRIBUTING.md  SHA_PINNING.md  alert-suppression.yml  codeql-config.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.sonarlint/: connectedMode.json
.streamlit/: config.toml
config/: CONFIGURATION.md  README.md  claude-desktop-dev.json  claude-desktop-docker-ghcr.json  claude-desktop-docker.json  claude-desktop.json  vscode-copilot-dev.json  vscode-copilot-docker-ghcr.json  vscode-copilot-docker.json  vscode-copilot.json
data/: ansible_versions.json
docs/: AI_REPOSITORY_SELECTION.md  ANSIBLE_UPGRADE_INTEGRATION.md  ANSIBLE_UPGRADE_MATRIX_IMPLEMENTATION.md  ANSIBLE_UPGRADE_ROADMAP.md  ANSIBLE_UPGRADE_SUMMARY.md  ARCHITECTURE.md  IR.md  METRICS_CONSISTENCY_SUMMARY.md  MIGRATION_SIMULATION_API.md  MIGRATION_SIMULATION_QUICK_REFERENCE.md  SECURITY.md  SECURITY_ANTI_PATTERNS.md  SECURITY_HEADERS_DEPLOYMENT.md  SECURITY_TRIVY_CVES.md  SONARCLOUD_PHASE1_EXTENSION.md  THEME_SYSTEM.md  contributing.md  docker-deployment.md  docker-setup.md  index.md  metrics-consistency.md
examples/: README.md  demo_mock_awx.py  demo_mock_chef_and_awx.py  demo_mock_chef_server.py  functional_migration_sim.py  legacy_simulation_demo.py  migration_simulation_demo.py  transition_simulation_demo.py
scripts/: check-workflow-truncation.sh  codeql-analyze.bat  codeql-analyze.sh
site/: 404.html  index.html  sitemap.xml
souschef/: __init__.py  ansible_upgrade.py  api_clients.py  assessment.py  cli.py  cli_registry.py  cli_utils.py  cli_v2_commands.py  deployment.py  ingestion.py  migration_config.py  migration_simulation.py  migration_v2.py  migration_wizard.py  orchestration.py  profiling.py  rest_api.py  server.py  webhooks.py
terraform-provider/: .env.test.example  .gitignore  .gitlab-ci.yml  COVERAGE_ANALYSIS.md  README.md  TESTING.md  coverage_analysis.html  coverage_map.html  fix_violations.sh  go.mod  go.sum  main.go  main_test.go  regenerate-tests.sh  test-acceptance.txt  test-latest.txt  test-output.txt  test-results-full.txt  test-results.txt
tests/: conftest.py  test_ci_generators.py  test_cli.py  test_coverage_push.py  test_enhanced_guards.py  test_error_recovery.py  test_errors_comprehensive.py  test_generators_repo.py  test_integration.py  test_integration_accuracy.py  test_mcp.py  test_metrics.py  test_performance.py  test_profiling.py  test_property_based.py  test_real_world_fixtures.py  test_server.py  test_snapshots.py  test_template_converter.py  test_ui.py  test_validation.py
tools/: CODEQL_QUICK_REFERENCE.md  CODEQL_SETUP.md  CODEQL_STATUS.md  LOCAL_CODEQL_GUIDE.md  README.md  check_codeql_suppressions.py
(+640 files in other folders)
